k8s/demo/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-echo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-echo
  template:
    metadata:
      labels:
        app: demo-echo
    spec:
      containers:
      - name: echo
        image: ealen/echo-server:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo-echo
  namespace: default
spec:
  selector:
    app: demo-echo
  ports:
  - port: 80
    targetPort: 80
